2005-07-22  Richard Hoelscher  <rah@rahga.com>

	* help/C/gataxx.xml: Rule clarification and update, #311126. 

2005-07-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gataxx.c: Invalidate the selection after an undo, it won't be
	either displayed or for the correct colour. See bug #310984,

	* gtkgridboard.c: When undoing a move, clear the selection (and
	redraw the board) with the old data. Fixes bug #311001.
	I also broke out the grid drawing code from gtk_gridboard_paint in
	a failed attempt to fix the bug. This might be useful when we redo
	the graphics engine and can properly delete grid lines.

2005-07-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gataxx.h: 
	* gataxx.c: 
	* properties.c: Remove get_gconf_uri () and replace it with static
	#defined strings. This costs 16 bytes more, but rewriting
	get_gconf_uri so it isn't so evil and error-prone will cost more
	than 16 bytes.

2005-05-09  Alan Horkan <horkana tcd ie>

	* help/C/gataxx.xml: Removed Known Bugs sections where not needed.

2005-04-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gataxx.c: Make sure that if the player is changed from computer
	to human before the computer-play timeout has gone off that we
	don't go into an infinite loop. Bug #300407. Rather than keep
	track of timeout IDs and explicitly remove them, we just do a
	sanity check in computer_move_cb ().

2005-04-11  Richard Hoelscher  <rah@rahga.com>

	* gataxx.c (quit_game_cb): Add a check to timeoutid source removal.
	(about_cb): Use GtkAboutDialog.

2005-03-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Patches from Dennis Cranston
	<dennis_cranston@yahoo.com> to make the game more HIG compliant.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gataxx.xml: Bump the app version number. No revisions.

2005-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Translate "Human". This is already translated